--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
+lxml==3.6.4
+beautifulsoup4==4.6.0
+certifi==2017.11.5
+chardet==3.0.4
+idna==2.6
+requests==2.7.0
+simplecrypto==0.3.3
 PyTelegramBotAPI==2.2.3
+urllib3==1.22
