--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-aiogram==2.20
-gspread==3.6.0
-heroku3==5.1.4
-requests>=2.25.1
-Unidecode==1.2.0
-pyTelegramBotAPI==4.5.1
-google-api-python-client==1.10.0
+aiohttp==3.12.14
+aiogram==3.22.0
+python-dotenv==1.2.1
